<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        >

    <LinearLayout
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp">

        <com.myapplication.UIDesign.Overview.pie2_legend
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@color/online"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:typeface="sans"
            android:text="@string/online"
            android:textColor="@color/gray"
            android:textSize="20sp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp" />
        <TextView
            android:id="@+id/online_num"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:typeface="sans"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp" />
    </LinearLayout>


        <LinearLayout
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            >
        <com.myapplication.UIDesign.Overview.pie2_legend
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@color/failure"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:typeface="sans"
            android:text="@string/failure"
            android:textColor="@color/gray"
            android:textSize="20sp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp" />
            <TextView
                android:id="@+id/failure_num"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:typeface="sans"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp" />
        </LinearLayout>


        <LinearLayout
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp">
        <com.myapplication.UIDesign.Overview.pie2_legend
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@color/planning"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:typeface="sans"
            android:text="@string/planning"
            android:textColor="@color/gray"
            android:textSize="20sp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp" />
            <TextView
                android:id="@+id/planning_num"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:typeface="sans"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp" />
        </LinearLayout>
    </LinearLayout>


</RelativeLayout>